@@ -19,11 +19,11 @@ and open the template in the editor.
 		<timeslot start="9:30" end="10:20">9:30 AM</timeslot>
 		<timeslot start="10:30" end="11:20">10:30 AM</timeslot>
 		<timeslot start="11:30" end="12:20">11:30 AM</timeslot>
-		<timeslot start="12:30" end="1:20">12:30 PM</timeslot>
-		<timeslot start="1:30" end="2:20">1:30 PM</timeslot>
-		<timeslot start="2:30" end="3:20">2:30 PM</timeslot>
-		<timeslot start="3:30" end="4:20">3:30 PM</timeslot>
-		<timeslot start="4:30" end="5:20">4:30 PM</timeslot>
+		<timeslot start="12:30" end="13:20">12:30 PM</timeslot>
+		<timeslot start="13:30" end="14:20">1:30 PM</timeslot>
+		<timeslot start="14:30" end="15:20">2:30 PM</timeslot>
+		<timeslot start="15:30" end="16:20">3:30 PM</timeslot>
+		<timeslot start="16:30" end="17:20">4:30 PM</timeslot>
 	</timeslots>
 	<courses>
 		<course code="4620" type="Lec">ACIT4620 Lec</course>
